tests/ui/derive-arbitrary/union/expected
error: Cannot derive `Arbitrary` for `Wrapper` union

|\
| #[derive(kani::Arbitrary)]\
|          ^^^^^^^^^^^^^^^\
|
note: `#[derive(Arbitrary)]` cannot be used for unions such as `Wrapper`

= note: this error originates in the derive macro `kani::Arbitrary`
